# juryrig

./: Cargo.toml  Readme.md
example_app/: jr_image.rs  main.rs
example_app/vulkan/: app.rs  buffer.rs  camera.rs  commands.rs  debug.rs  error.rs  errors.rs  initialisation.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  surface.rs  swapchain.rs  texture.rs
khodol/: lib.rs
shaders/: fragment.glsl  vertex.glsl
src/: main.rs
src/vulkan/: frame_buffers.rs  logical_device.rs  mod.rs  physical_device.rs  render_pass.rs  structs.rs
src/vulkan/shaders/: compile.bat
