[package]
name = "juryrig"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A small game engine in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "juryrig"
path = "juryrig/lib.rs"

[[bin]]
name = "example_app"
path = "example_app/main.rs"

[dependencies]
vk-shader-macros = "0.2.8"
log = "0.4"
pretty_env_logger = "0.4"
ash = "0.37.*"
winit = "0.28"
gpu-allocator = "0.22.0"
glm = "0.2.3"
